# agentcontainer

./: .gitattributes  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  deny.toml
.agentcontainer/: Dockerfile  config.toml  get_build_args.sh  get_run_args.sh  process_claude_output.sh
.config/: nextest.toml
.github/workflows/: ci.yaml
docs/: lints.md  things-to-do-on-new-rust-versions.md  versions-to-upgrade.md
scripts/: check_executables_have_shebangs.sh  check_line_counts.sh  check_line_lengths.sh  check_shebang_scripts_are_executable.sh  dev_build.sh  dev_lint.sh  dev_run.sh  dev_tests.sh  install_rust_dev_dependencies.sh
src/: config.rs  main.rs
src/config/: cli.rs  entries.rs  error.rs  merging_provider.rs  mod.rs  tests.rs
src/config/tests/: build_arguments.rs  clean.rs  default_values.rs  empty_string_removal.rs  environment_variables.rs  files_read.rs  get_container_name.rs  get_image_name.rs  list_accumulation.rs  mod.rs  mountpoints.rs  path_expansion.rs  tilde_expansion.rs  validation.rs  volumes.rs
src/config/tests/path_expansion/: mod.rs  post_run.rs  pre_build.rs  pre_run.rs  volumes.rs
src/hooks/: mod.rs  tests.rs
src/run/: mod.rs  tests.rs
src/utils/: clock.rs  docker.rs  fs.rs  git.rs  logging.rs  mod.rs  paths.rs  processes.rs  random.rs  slugify.rs
tests/: cli.rs
